# openmantleproxy

./: .gitignore  Cargo.toml  LICENSE  README.md
certs/: README.txt
src/: Uranometrical.OpenMantleProxy.sln  main.rs
src/Uranometrical.OpenMantleProxy/: Program.cs  Uranometrical.OpenMantleProxy.csproj  start-mantle.bat  start-mantle.sh  start-mantlefine.bat  start-mantlefine.sh  start-optimantle.bat  start-optimantle.sh
src/Uranometrical.OpenMantleProxy.Hosts/: HostsFileEditor.cs  HostsFileResolver.cs  Uranometrical.OpenMantleProxy.Hosts.csproj
src/Uranometrical.OpenMantleProxy/Commands/: CleanHostsCommand.cs  ProxyServerCommand.cs
src/Uranometrical.OpenMantleProxy/Server/: CapeServer.cs
