[package]
name = "openmantleproxy"
version = "1.0.0"
authors = ["Tomat"]
edition = "2021"

[dependencies]
bufstream = "0.1.4"
chrono = "0.4.19"
port_scanner = "0.1.5"
argh = "0.1.4"
url = "2.2.2"
text_io = "0.1.9"
reqwest = { version = "0.11.9", features = ["blocking"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.6"